cairo: Fix rendering of JPX images with transparency

Handle transparent JPX images, they may contain RGBA data
when no ColorSpace pdf dict is defined or when SMaskInData
is non-zero.

PDF files posted in below issues are fixed by this commit:
https://gitlab.freedesktop.org/poppler/poppler/-/issues/1486
https://github.com/mozilla/pdf.js/issues/16782
https://github.com/mozilla/pdf.js/issues/11306
https://github.com/mozilla/pdf.js/issues/17416

Inspired by related fix in pdf.js:
https://github.com/mozilla/pdf.js/pull/18204

While working on this commit we also succesfully addressed
regressions that emerged for the following files:
https://github.com/mozilla/pdf.js/issues/18896
https://bugs.freedesktop.org/attachment.cgi?id=49294

Issue #1486