poppler/GfxState.h
@@ -212,7 +212,8 @@ enum GfxColorSpaceMode
     csIndexed,
     csSeparation,
     csDeviceN,
-    csPattern
+    csPattern,
+    csDeviceRGBA // used for transparent JPX images, they contain RGBA data · Issue #1486
 };
 
 // This shall hold a cmsHPROFILE handle.
@@ -420,6 +421,26 @@ public:
 
     int getNComps() const override { return 3; }
     void getDefaultColor(GfxColor *color) const override;
+
+private:
+};
+
+//------------------------------------------------------------------------
+// GfxDeviceRGBAColorSpace
+//------------------------------------------------------------------------
+
+class POPPLER_PRIVATE_EXPORT GfxDeviceRGBAColorSpace : public GfxDeviceRGBColorSpace
+{
+public:
+    GfxDeviceRGBAColorSpace();
+    ~GfxDeviceRGBAColorSpace() override;
+    std::unique_ptr<GfxColorSpace> copy() const override;
+    GfxColorSpaceMode getMode() const override { return csDeviceRGBA; }
+
+    int getNComps() const override { return 4; }
+
+    // GfxDeviceRGBAColorSpace-specific access
+    void getARGBPremultipliedLine(unsigned char *in, unsigned int *out, int length);
 
 private:
 };
