poppler/JPXStream.h
@@ -293,7 +293,7 @@ public:
     int lookChar() override;
     GooString *getPSFilter(int psLevel, const char *indent) override;
     bool isBinary(bool last = true) const override;
-    void getImageParams(int *bitsPerComponent, StreamColorSpaceMode *csMode) override;
+    void getImageParams(int *bitsPerComponent, StreamColorSpaceMode *csMode, bool *hasAlpha) override;
 
 private:
     void fillReadBuf();
